# reading-stats

./: .gitignore  LICENSE  pyproject.toml
reading_stats/: __init__.py
tests/: test_reading_stats.py
