[tool.poetry]
name = "reading-stats"
version = "0.1.0"
description = ""
authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
oauth2client = "^4.1.3"
gspread = "^3.1.0"
environs = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
